# TopoPyBox

./: .gitignore  .gitmodules  CMakeLists.txt  GradientTest.ipynb  README.md  TopPyBox.py  abspectTest.ipynb  aspect.m  aspectTest.ipynb  aspectTest.m  gradient.py  identflatsTest.ipynb  requirements.txt  test_FlowObject.ipynb  test_fillsinks.ipynb  test_gradient8.ipynb  test_hillshade.ipynb  test_identflats.ipynb  test_imageschs.ipynb
.ipynb_checkpoints/: GradientTest-checkpoint.ipynb
TopoToolBox3/: aspect.m  mex_aspect.c  mex_aspect.mexa64
lib/: CMakeLists.txt  LibReadMe.md  gradient.c
libMatlab/: compile.m  mex_aspect.c  mex_aspect.mexa64  mex_aspect.mexmaca64
libPy/: TopPyBox.py  __init__.py  aspect.py
src/: CMakeLists.txt  aspect.c  aspect.h  funktion.c
topoBoxC/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
topoBoxC/GRIDobj/: andGrid.c  aspect.c  fillsinks.c  gradient8.c  identifyflats.c
topoBoxMatlab/libMatlab/: mex_aspect.c  mex_aspect.mexmaca64
topoBoxPy/: __init__.py  flow.py  grid.py  setup.py  stream.py
topoBoxPy/flow_mixins/: test.py
topoBoxPy/grid_mixins/: andGrid.py  aspect.py  fillsinks.py  gradient8.py  hillshade.py  identifyflats.py  imagesc.py  imageschs.py  info.py  magicfunctions.py
topoBoxPy/stream_mixins/: test.py
